--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dev_dependencies:
   crypto: ^3.0.3
   flutter_riverpod: ^2.4.10
   flutter_carousel_widget: ^2.2.0
+  flutter_image_slideshow: ^0.1.6
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -62,7 +63,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logos/
-  #   - images/a_dot_ham.jpeg
+    - assets/meetups/
+    - assets/persons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
