--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
   flutter_riverpod: ^2.4.10
   flutter_carousel_widget: ^2.2.0
   flutter_image_slideshow: ^0.1.6
+  http: ^1.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
